this should fix the title overlap

--- a/re-des/style.css
+++ b/re-des/style.css
@@ -70,7 +70,7 @@ html, body {margin:0;padding:0;height:100%; overflow:hidden;}
         left: 50%;
 
         transform: translate(-50%, 0);
-        top: 15%;
+        top: 20%;
 
     }
 
